--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://YashG504.github.io/expense-tracker",
+  "homepage": "https://aditya-d-d.github.io/expense-tracker/",
   "name": "expense-tracker",
   "private": true,
   "version": "0.0.0",
